@@ -1,3 +1,7 @@
+2009-09-08 Kristin Branson
+
+Modified get_readframe_fcn to return "headerinfo" which contains all the info about the movie read when the movie reader is initialized. Also added help comments to the top. 
+
 2009-06-08 Kristin Branson
 
 VERSION 0.1.04 CREATED.
@@ -12,3 +16,7 @@ VERSION 0.1.04 CREATED.
 2009-06-15 Kristin Branson
 
 * changed get_readframe_fcn so that it returns fid=0 when using mmreader to read an AVI. 
+
+2009-09-04 Kristin Branson
+
+* changed createdata_perfile to fix 'end' missing from if statement checking for no off field.
